--- a/client/src/App.css
+++ b/client/src/App.css
@@ -180,7 +180,7 @@ input.error {
   color: black;
 }
 .user{
-  width:80vw;
+  width:100%;
   float: left;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -223,4 +223,71 @@ ul{
 }
 span{
   font-family: "Noto+Serif+Khojki";
+}
+
+/* popup config */
+.popup{
+  font-family: "Noto+Serif+Khojki";
+}
+.popup p{
+  margin: .5rem 0rem;
+}
+.bus-time{
+  margin: .25rem 0rem;
+  padding-left: 5px;
+  border-bottom: 2px solid black;
+}
+
+/* Home loading */
+
+.center{
+  display:flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+}
+.ring{
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  border: 50%;
+}
+.ring::before{
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
+  animation: ring 2s linear infinite;
+}
+@keyframes ring {
+  0%{
+  transform: rotate(0deg);
+  box-shadow:1px 5px 2px #e65c00;
+}
+  50%{
+  transform: rotate(180deg);
+  box-shadow:1px 5px 2px #18b201;
+}
+  100%{
+  transform: rotate(360deg);
+  box-shadow:1px 5px 2px #0456c8;
+}
+}
+.city-details span{
+  color: #737373;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  line-height: 200px;
+  animation: text 3s ease-in-out infinite;
+}
+@keyframes text {
+  50%{
+      color: #eeeeee;
+  }
 }
